# AI-BOT-

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-all.txt
config/: config.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  HOW_TO_RUN.md  RESEARCH_PLAYBOOK.md
scripts/: run_demo.py
src/ai_trading_system/: __init__.py  cli.py  config.py
src/ai_trading_system/backtests/: engine.py  metrics.py
src/ai_trading_system/data/: __init__.py  cache.py  errors.py  ingestion.py  retry.py  sources.py  validation.py
src/ai_trading_system/execution/: broker.py  risk.py
src/ai_trading_system/features/: __init__.py  pipeline.py  technical.py  validation.py
src/ai_trading_system/models/: __init__.py  ml.py  validation.py
src/ai_trading_system/monitoring/: dashboard.py
src/ai_trading_system/portfolio/: construction.py
src/ai_trading_system/reports/: reporting.py
src/ai_trading_system/rl/: environment.py  training.py
src/ai_trading_system/utils/: time.py
tests/: test_data_layer.py  test_feature_engineering_layer.py  test_features_portfolio_backtest.py  test_ml_research_pipeline.py
