[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trading-system-india"
version = "0.1.0"
description = "Institutional-style AI trading research platform for Nifty 50 equities."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "AI-BOT"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "pyyaml>=6.0",
  "requests>=2.31",
  "joblib>=1.3",
]

[project.optional-dependencies]
ml = ["xgboost>=2.0", "lightgbm>=4.0", "catboost>=1.2", "optuna>=3.5"]
rl = ["gymnasium>=0.29", "stable-baselines3>=2.2"]
backtest = ["backtrader>=1.9", "vectorbt>=0.26"]
monitoring = ["streamlit>=1.30", "plotly>=5.18"]
dev = ["pytest>=7.4", "ruff>=0.3", "mypy>=1.8"]
all = [
  "xgboost>=2.0", "lightgbm>=4.0", "catboost>=1.2", "optuna>=3.5",
  "gymnasium>=0.29", "stable-baselines3>=2.2", "backtrader>=1.9",
  "streamlit>=1.30", "plotly>=5.18", "pytest>=7.4", "ruff>=0.3"
]

[project.scripts]
ai-trade-train = "ai_trading_system.cli:train_main"
ai-trade-backtest = "ai_trading_system.cli:backtest_main"
ai-trade-evaluate = "ai_trading_system.cli:evaluate_main"
ai-trade-monitor = "ai_trading_system.cli:monitor_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
